# github_snippets

./: .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  WORKSPACE  ci.bazelrc  deps.bzl  package.json  shared.bazelrc
.github/: renovate.json
.github/actions/build_and_test/: action.yml
.github/workflows/: ci.yml
lib/: BUILD.bazel  date.sh
lib/claude/: BUILD.bazel  summary_prompt.md
lib/jq/: BUILD.bazel  github.jq
tests/lib_tests/date_tests/: BUILD.bazel  days_before_test.sh  days_math_tests.sh  do_date_cmd_test.sh  find_beginning_of_previous_week_test.sh  find_beginning_of_week_test.sh  get_year_from_date_test.sh
tests/lib_tests/jq_tests/: BUILD.bazel  github_test.sh  github_tests.txt
tests/lib_tests/jq_tests/github_tests/: BUILD.bazel  trim_test.sh
tests/tools_tests/: BUILD.bazel  fake_gh.sh  generate_weekly_snippets_test.sh
tests/tools_tests/fixtures/: closed_issues.json  closed_prs.json  commented_issues.json  opened_issues.json  reviewed_prs.json
tools/: BUILD.bazel  claude.bzl  generate_weekly_snippets.sh  pr_search_result_to_md.jq
