load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")

bzlformat_pkg(name = "bzlformat")

sh_test(
    name = "generate_weekly_snippets_test",
    srcs = ["generate_weekly_snippets_test.sh"],
    data = [
        "//tools:generate_weekly_snippets",
    ],
    env_inherit = [
        # The HOME, GH_TOKEN, and GITHUB_TOKEN environment variables help the gh utility find
        # its auth info.
        "GITHUB_TOKEN",
        "GH_TOKEN",
        "HOME",
    ],
    deps = [
        "@bazel_tools//tools/bash/runfiles",
        "@cgrindel_bazel_starlib//shlib/lib:assertions",
    ],
)
