load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

bzlformat_pkg(name = "bzlformat")

sh_test(
    name = "generate_weekly_snippets_test",
    srcs = ["generate_weekly_snippets_test.sh"],
    data = [
        "//tools:generate_weekly_snippets",
        "@jq_toolchains//:resolved_toolchain",
    ],
    # The script invokes the source .sh directly via rlocation, so it does
    # not inherit env vars from the sh_binary target. We replay the same
    # env wiring here so the script's CLAUDE_BIN / PRETTIER_BIN_RUNFILE
    # references resolve under `set -u`.
    env = {
        "CLAUDE_BIN": "$(CLAUDE_BIN)",
        "JQ_BIN": "$(JQ_BIN)",
        "PRETTIER_BIN_RUNFILE": "cgrindel_github_snippets/prettier_/prettier",
    },
    env_inherit = [
        # The HOME, GH_TOKEN, and GITHUB_TOKEN environment variables help the gh utility find
        # its auth info.
        "GITHUB_TOKEN",
        "GH_TOKEN",
        "HOME",
    ],
    toolchains = [
        "//tools:claude_runfile",
        "@jq_toolchains//:resolved_toolchain",
    ],
    deps = [
        "@bazel_tools//tools/bash/runfiles",
        "@cgrindel_bazel_starlib//shlib/lib:assertions",
    ],
)
