load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

bzlformat_pkg(name = "bzlformat")

sh_test(
    name = "github_test",
    srcs = ["github_test.sh"],
    data = [
        "github_tests.txt",
        "//lib/jq:modules",
    ],
    deps = [
        "@bazel_tools//tools/bash/runfiles",
        "@cgrindel_bazel_starlib//shlib/lib:assertions",
    ],
)
